Update popup text

--- a/languages/en.json
+++ b/languages/en.json
@@ -32,7 +32,9 @@
             },
             "global_enable_clear_all_stats_popup":{
                 "Name": "Enable CLEAR ALL popup",
-                "Hint": "Create a popup for the GM that asks if they want to clear all user data (DB and Local) every time they join the game."
+                "Hint": "Create a popup for the GM that asks if they want to clear all user data (DB and Local) every time they join the game.",
+                "title": "Clear All Popup",
+                "context": "Clearing ALL Player Data (Local And DB). Are you sure?"
             }
         },
         "both_forms":{
