--- a/languages/en.json
+++ b/languages/en.json
@@ -147,7 +147,7 @@
                 "tab_unsuported_link":      "Link to Feature Request Page"
             },
             "tab_d20_rolls":{
-                "attack": "D20 Atack Rolls",
+                "attack": "D20 Attack Rolls",
                 "damage": "D20 Damage Rolls",
                 "save": "D20 Save Rolls",
                 "skill": "D20 Skill Rolls",
